--- a/project-01/src/sass/components/copyright.scss
+++ b/project-01/src/sass/components/copyright.scss
@@ -1,18 +1,20 @@
 .copyright {
-  padding: 28px 0px 28px;
+  // width: 100%;
+  padding: 30px 30px 28px;
   background-color: #111517;
-  text-align: left;
-
+  text-align: center;
+  
   @include tablet {
-    padding: 30px 0px 28px;
+    padding: 30px 40px 28px;
+    text-align: left;
   }
 
   @include desktop {
-    padding: 14px 0px;
+    padding: 14px 35px 12px;
   }
 
   @include desktop-wide {
-    padding: 14px 0px;
+    padding: 14px 155px 12px 187px;
   }
 }
 
