--- a/project-01/src/sass/components/menu-actions.scss
+++ b/project-01/src/sass/components/menu-actions.scss
@@ -3,6 +3,15 @@
   flex-wrap: wrap;
   justify-content: center;
   @extend %list;
+
+  @include tablet {
+    justify-content: space-between;
+    margin-bottom: 0px;
+  }
+
+  @include desktop {}
+
+  @include desktop-wide {}
 }
 
 .menu-actions__item {
@@ -33,6 +42,47 @@
   &:not(:nth-last-of-type(-3n+1)) {
     margin-bottom: 18px;
   }
+
+  @include tablet {
+    &:not(:nth-last-of-type(-3n+1)) {
+      margin-bottom: 29px;
+    }
+
+    &:nth-last-of-type(-n+2) {
+      margin-bottom: 0px;
+    }
+  }
+
+  @include desktop {
+    width: 390px;
+    padding: 36px 15px 26px;
+
+    &:not(:nth-last-of-type(-3n+1)) {
+      margin-bottom: 19px;
+    }
+
+    &:nth-last-of-type(-n+3) {
+      margin-bottom: 0px;
+    }
+  }
+
+  @include desktop-wide {
+    width: 430px;
+    padding: 40px 20px 46px;
+
+    &:not(:nth-last-of-type(-3n+1)) {
+      margin-bottom: 22px;
+    }
+
+    &:nth-last-of-type(-n+3) {
+      margin-bottom: 0px;
+    }
+  }
+}
+
+.menu-actions__item:hover .menu-actions__title::after,
+.menu-actions__item:focus .menu-actions__title::after {
+  background-color: #ffffff;
 }
 
 .menu-actions__link {
@@ -46,6 +96,18 @@
   margin: 0px 0px 14px 0px;
   fill: #ff6b08;
   transition: all 0.2s linear;
+
+  @include tablet {
+    margin: 0px 0px 12px 0px;
+  }
+
+  @include desktop {
+    margin: 0px 0px 18px 0px;
+  }
+
+  @include desktop-wide {
+    margin: 0px 0px 14px 0px;
+  }
 }
 
 .menu-actions__title {
@@ -78,65 +140,8 @@
   &--newline {
     display: none;
   }
-}
 
-.menu-actions__item:hover .menu-actions__title::after,
-.menu-actions__item:focus .menu-actions__title::after {
-  background-color: #ffffff;
-}
-
-.menu-actions__text {
-  color: #858585;
-  line-height: 1.818;
-  margin: 0px;
-  padding: 0px 10px;
-  transition: all 0.2s linear;
-
-  &--location {
-    display: none;
-  }
-}
-
-
-@media screen and (min-width: 768px) {
-  .menu-actions {
-    justify-content: space-between;
-    margin-bottom: 0px;
-  }
-
-  .menu-actions__icon {
-    margin: 0px 0px 12px 0px;
-  }
-
-  .menu-actions__item:not(:nth-last-of-type(-3n+1)) {
-    margin-bottom: 29px;
-  }
-
-  .menu-actions__item:nth-last-of-type(-n+2) {
-    margin-bottom: 0px;
-  }
-}
-
-
-@media screen and (min-width: 1280px) {
-  .menu-actions__item {
-    width: 390px;
-    padding: 36px 15px 26px;
-
-    &:not(:nth-last-of-type(-3n+1)) {
-      margin-bottom: 19px;
-    }
-
-    &:nth-last-of-type(-n+3) {
-      margin-bottom: 0px;
-    }
-  }
-
-  .menu-actions__icon {
-    margin: 0px 0px 18px 0px;
-  }
-
-  .menu-actions__title {
+  @include desktop {
     font-size: 18px;
     line-height: 1.62;
     margin: 0px 0px 28px 0px;
@@ -152,38 +157,7 @@
     }
   }
 
-  .menu-actions__text {
-    font-size: 15px;
-    line-height: 2.083;
-    padding: 0px;
-    letter-spacing: 1.1px;
-
-    &--location {
-      display: block;
-    }
-  }
-}
-
-
-@media screen and (min-width: 1680px) {
-  .menu-actions__item {
-    width: 430px;
-    padding: 40px 20px 46px;
-
-    &:not(:nth-last-of-type(-3n+1)) {
-      margin-bottom: 22px;
-    }
-
-    &:nth-last-of-type(-n+3) {
-      margin-bottom: 0px;
-    }
-  }
-
-  .menu-actions__icon {
-    margin: 0px 0px 14px 0px;
-  }
-
-  .menu-actions__title {
+  @include desktop-wide {
     font-size: 21px;
     line-height: 1.4;
     margin: 0px 0px 31px 0px;
@@ -196,8 +170,31 @@
       display: none;
     }
   }
+}
 
-  .menu-actions__text {
+.menu-actions__text {
+  color: #858585;
+  line-height: 1.818;
+  margin: 0px;
+  padding: 0px 10px;
+  transition: all 0.2s linear;
+
+  &--location {
+    display: none;
+  }
+
+  @include desktop {
+    font-size: 15px;
+    line-height: 2.083;
+    padding: 0px;
+    letter-spacing: 1.1px;
+
+    &--location {
+      display: block;
+    }
+  }
+
+  @include desktop-wide {
     font-size: 18.75px;
     line-height: 1.667;
     padding: 0px 26px;
