--- a/project-01/src/sass/components/section-action.scss
+++ b/project-01/src/sass/components/section-action.scss
@@ -2,7 +2,22 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 38px 0px 0px;
+  padding: 40px 0px 0px;
+
+  @include tablet {
+    padding: 0px 82px 0px;
+    margin-bottom: 52px;
+  }
+
+  @include desktop {
+    padding: 0px 35px 0px;
+    margin-bottom: 100px;
+  }
+
+  @include desktop-wide {
+    padding: 0px 156px 0px 186px;
+    margin-bottom: 132px;
+  }
 }
 
 .section-action__title {
@@ -11,51 +26,30 @@
   line-height: 1.65;
   margin: 0px 0px 34px 0px;
   letter-spacing: 1.45px;
-}
 
-.section-action__items {
-  margin-bottom: 58px;
-}
-
-@media screen and (min-width: 768px) {
-  .section-action__wrapper {
-    padding: 0px 82px 0px;
-    margin-bottom: 52px;
-  }
-
-  .section-action__title {
+  @include tablet {
     font-size: 26px;
     line-height: 1.269;
     margin: 0px 0px 34px 0px;
     padding-right: 10px;
   }
-}
 
-@media screen and (min-width: 1280px) {
-  .section-action__wrapper {
-    padding: 0px 35px 0px;
-    margin-bottom: 100px;
-  }
-
-  .section-action__title {
+  @include desktop {
     font-size: 42px;
     line-height: 1;
     text-align: left;
     margin: 0px 0px 44px 0px;
-    letter-spacing: 1.45px;
-  }
-}
-
-@media screen and (min-width: 1680px) {
-  .section-action__wrapper {
-    padding: 0px 156px 0px 186px;
-    margin-bottom: 132px;
+    letter-spacing: 1.8px;
   }
 
-  .section-action__title {
+  @include desktop-wide {
     font-size: 46px;
     line-height: 1.365;
     letter-spacing: 1.9px;
     margin-bottom: 0px 0px 32px 0px;
   }
+}
+
+.section-action__items {
+  margin-bottom: 58px;
 }
