--- a/project-01/src/sass/components/section-problem.scss
+++ b/project-01/src/sass/components/section-problem.scss
@@ -1,5 +1,20 @@
 .section-problem {
   min-height: 676px;
+
+  @include tablet {
+    min-height: 552px;
+    background-color: #fff;
+  }
+
+  @include desktop {
+    // min-height: 488px;
+    min-height: 690px;
+  }
+
+  @include desktop-wide {
+    // min-height: 488px;
+    min-height: 854px;
+  }
 }
 
 .section-problem__wrapper {
@@ -8,14 +23,36 @@
   height: 516px;
   background-color: #111517;
   padding: 46px 20px 0px;
+
+  @include tablet {
+    width: 100%;
+    height: 328px;
+    padding: 56px 40px 0px 40px;
+    background-image: url(../../images/bgr-fire.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0 0;
+  }
+
+  @include desktop {
+    min-height: 526px;
+    padding: 68px 35px 0px;
+    background-image: url(../../images/bgr-fire-desk.png);
+  }
+
+  @include desktop-wide {
+    min-height: 560px;
+    padding: 106px 156px 0px 186px;
+    background-image: url(../../images/bgr-fire-desk-larg.png);
+  }
 }
 
 .section-problem__title {
   font-size: 20px;
   color: rgb(255, 255, 255);
-  line-height: 1.5;
+  line-height: 1.578;
   text-align: left;
-  margin: 0px 0px 20px 0px;
+  margin: 0px 0px 12px 0px;
   padding: 0px 45px 0px 0px;
   white-space: pre-line;
   letter-spacing: 1.2px;
@@ -33,26 +70,8 @@
     color: #ff6b08;
     padding-right: 0px;
   }
-}
 
-
-@media screen and (min-width: 768px) {
-  .section-problem {
-    min-height: 552px;
-    background-color: #fff;
-  }
-
-  .section-problem__wrapper {
-    width: 100%;
-    height: 328px;
-    padding: 56px 40px 0px 40px;
-    background-image: url(../../images/bgr-fire.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 0 0;
-  }
-
-  .section-problem__title {
+  @include tablet {
     font-size: 26px;
     line-height: 1.269;
     padding: 0px 200px 0px 0px;
@@ -75,22 +94,8 @@
       padding-right: 0px;
     }
   }
-}
 
-
-@media screen and (min-width: 1280px) {
-  .section-problem {
-    // min-height: 488px;
-    min-height: 690px;
-  }
-
-  .section-problem__wrapper {
-    min-height: 526px;
-    padding: 68px 35px 0px;
-    background-image: url(../../images/bgr-fire-desk.png);
-  }
-
-  .section-problem__title {
+  @include desktop {
     font-size: 42px;
     line-height: 1.346;
     padding-right: 480px;
@@ -105,21 +110,8 @@
       padding-right: 0px;
     }
   }
-}
 
-@media screen and (min-width: 1680px) {
-  .section-problem {
-    // min-height: 488px;
-    min-height: 854px;
-  }
-
-  .section-problem__wrapper {
-    min-height: 560px;
-    padding: 106px 156px 0px 186px;
-    background-image: url(../../images/bgr-fire-desk-larg.png);
-  }
-
-  .section-problem__title {
+  @include desktop-wide {
     font-size: 46px;
     line-height: 1.365;
     padding-right: 530px;
