--- a/project-01/src/sass/components/section-slider.scss
+++ b/project-01/src/sass/components/section-slider.scss
@@ -7,6 +7,21 @@
   margin-bottom: 56px;
   padding: 51px 20px 0px;
   position: relative;
+
+  @include tablet {
+    padding: 0px 40px;
+    margin-bottom: 75px;
+  }
+
+  @include desktop {
+    padding: 0px 100px 0px 116px;
+    margin-bottom: 104px;
+  }
+
+  @include desktop-wide {
+    padding: 0px 310px 0px;
+    margin-bottom: 124px;
+  }
 }
 
 .section-slider__title {
@@ -16,6 +31,32 @@
   text-align: center;
   margin: 0px 0px 18px 0px;
   letter-spacing: 1.2px;
+
+  @include tablet {
+    font-size: 26px;
+    line-height: 2.405;
+    margin: 0px 0px 24px 0px;
+
+    &--position {
+      display: none;
+    }
+  }
+
+  @include desktop {
+    font-size: 42px;
+    line-height: 1.489;
+    padding-right: 16px;
+    margin: 0px 0px 26px 0px;
+    letter-spacing: 2px;
+  }
+
+  @include desktop-wide {
+    font-size: 46px;
+    line-height: 1.365;
+    margin: 0px 0px 40px 0px;
+    letter-spacing: 2px;
+    padding: 0px;
+  }
 }
 
 .section-slider__button {
@@ -24,7 +65,7 @@
   width: 20px;
   height: 11px;
   fill: #ff6b08;
-  background: #ffffff;
+  background: none;
 
   &--right-arrow {
     position: absolute;
@@ -43,30 +84,8 @@
     fill: #ffffff;
     background-color: #ff6b08;
   }
-}
 
-.section-slider__icon {
-  width: 100%;
-  height: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .section-slider__wrapper {
-    padding: 0px 40px;
-    margin-bottom: 75px;
-  }
-
-  .section-slider__title {
-    font-size: 26px;
-    line-height: 2.405;
-    margin: 0px 0px 24px 0px;
-
-    &--position{
-      display: none;
-    }
-  }
-
-  .section-slider__button {
+  @include tablet {
     width: 25px;
     height: 14px;
 
@@ -80,25 +99,11 @@
       left: 23px;
     }
   }
-}
 
-@media screen and (min-width: 1280px) {
-  .section-slider__wrapper {
-    padding: 0px 100px 0px 116px;
-    margin-bottom: 98px;
-  }
-  
-  .section-slider__title {
-    font-size: 42px;
-    line-height: 1.489;
-    padding-right: 16px;
-    margin: 0px 0px 26px 0px;
-    letter-spacing: 2px;
-  }
-
-  .section-slider__button {
+  @include desktop {
     width: 25px;
     height: 14px;
+
 
     &--right-arrow {
       bottom: 258px;
@@ -110,24 +115,8 @@
       left: 58px;
     }
   }
-}
 
-
-@media screen and (min-width: 1680px) {
-  .section-slider__wrapper {
-    padding: 0px 310px 0px;
-    margin-bottom: 124px;
-  }
-
-  .section-slider__title {
-    font-size: 46px;
-    line-height: 1.365;
-    margin: 0px 0px 40px 0px;
-    letter-spacing: 2px;
-    padding: 0px;
-  }
-
-  .section-slider__button {
+  @include desktop-wide {
     width: 25px;
     height: 14px;
 
@@ -143,4 +132,9 @@
       left: 252px;
     }
   }
+}
+
+.section-slider__icon {
+  width: 100%;
+  height: 100%;
 }
